Versions updated; some fixes in pom files